app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: snowflake-app-service
spec:
  selector:
   app: snowflake-app
  ports:
   - name: http
     port: 80
     targetPort: 8080
     nodePort: 30080
  type: NodePort
